登陆忘记密码事的手机号回显

--- a/pc/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/pc/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -467,9 +467,9 @@
 
 						<div class="fengmian">
 							<span style="vertical-align: top;"><em>*</em>封面图</span>
-							<span class="fengmian_pic work-picter"  onclick="$('#zhuzuo_picIpt').click()">
-								<p style="font-size: 90px;height: 100px;font-weight: 300;color: #d8d8d8;text-align: center;">+</p>
-								<p style="text-align: center;color: #999;font-size: 14px;">点击上传封面图片</p>
+							<span class="fengmian_pic work-picter"  onclick="$('#zhuzuo_picIpt').click()" style="width: 100px; height: 140px;">
+								<p style="font-size: 56px;height: 75px;font-weight: 300;color: #d8d8d8;text-align: center;">+</p>
+								<p style="text-align: center;color: #999;font-size: 14px;">点击上传封面</p>
 							</span>
 							<span class="fengmian_tip">
 									<p>文件小于2M</p>
