--- a/pc/online-web/src/main/webapp/web/html/resetPassword.html
+++ b/pc/online-web/src/main/webapp/web/html/resetPassword.html
@@ -42,7 +42,7 @@
         </div>
         <div class="phoneNumberBox">
             <div class="resetUsernameBox">
-                <input type="text" class="resetusername" maxlength="30" placeholder="手机号">
+                <input type="text" class="resetusername have-phone" maxlength="30" placeholder="手机号">
                 <span class="resetUsernameClose"></span>
                 <div class="resetUsernameHit wordHit">
                     <img src="/web/images/alter_14.png" alt=""/><span class="HitWord"></span>
