修改课程字数超出隐藏兼容火狐及谷歌

--- a/pc/online-web/src/main/webapp/web/html/myStudyCenter.html
+++ b/pc/online-web/src/main/webapp/web/html/myStudyCenter.html
@@ -459,7 +459,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="pages" style="display: none;">
+			<div class="pages" style="display: none; margin-top: 20px;">
 				<div id="Pagination"></div>
 				<div class="searchPage">
 					<span class="page-sum">共<strong class="allPage">0</strong>页</span>
