pc直播间--文档修改背景图。h5学习修改接口区域，专辑页隐藏评论

--- a/wechat/src/main/webapp/xcview/html/live_select_album.html
+++ b/wechat/src/main/webapp/xcview/html/live_select_album.html
@@ -179,7 +179,7 @@
 		</div>
 <!--详情结束-->
 	<!--评论-->
-	<div class="wrap_comment_title" onclick="btn_allComment()">
+	<div class="wrap_comment_title" onclick="btn_allComment()" style="display:none;">
 		<p>评论</p>
 		<span>
 			<img src="../images/video_review.png" />
@@ -284,12 +284,12 @@
 		</script>
 	</div>
 	<!--无评论显示的图片-->
-	<div class="quie_pic">
+	<!-- <div class="quie_pic" style="display: none !important;">
 		<img src="../images/no_comment.png"/>	
 		<p>还没有评价？快来抢沙发呀~</p>
-	</div>
+	</div> -->
 	<!--底下评论输入框-->
-	<div class="wrap_user_input">
+	<div class="wrap_user_input" style="display: none !important;">
 		<div class="wrap_input z">
 			<img src="../images/inp_retured.png"/>
 			<span>来点儿神聊</span>
