--- a/wechat/src/main/webapp/xcview/html/home_page.html
+++ b/wechat/src/main/webapp/xcview/html/home_page.html
@@ -446,7 +446,7 @@ onclick="common_jump_all({{item.id}})" ></a>
             				<li class="listenCourseList" data-jump="{{item.id}}">
         					
 		                    		<a style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; z-index: 999;display: block;width: 3.39rem;height: 3.25rem;display:inline-table;" 
-onclick="common_jump_school({{item.watchState}},{{item.type}},{{item.collection}},{{item.id}})"></a>
+onclick="common_jump_school({{item.watchState}},{{item.type}},{{item.collection?1:0}},{{item.id}})"></a>
             					
             					<div class="lectures_main_one">
             						<div class="lectures_one_img">
