页面多个逗号报错

--- a/pc/online-web/src/main/webapp/web/html/anchor/curriculum.html
+++ b/pc/online-web/src/main/webapp/web/html/anchor/curriculum.html
@@ -114,7 +114,7 @@
 		</td>
 		<td>
 			{{if course.courseForm != 1}}
-			{{course.courseLength}}'
+			{{course.courseLength}}
 			{{else}}
 			无
 			{{/if}}
