去掉个性化编辑  以及修稿图标

--- a/pc/online-web/src/main/webapp/web/html/ResidentHospital.html
+++ b/pc/online-web/src/main/webapp/web/html/ResidentHospital.html
@@ -87,7 +87,7 @@
 								<img src="" alt="">
 								<!--<div class="pic" style="width: 80px;height: 80px;border-radius: 50%;"></div>-->
 								<h4></h4>
-								<p style="text-overflow: ellipsis;white-space: nowrap;overflow: hidden;padding: 0 20px;"></p>
+								<!--<p style="text-overflow: ellipsis;white-space: nowrap;overflow: hidden;padding: 0 20px;"></p>-->
 							</li>
 							<li class="active hos_point">
 								<a href="#hos_Administration" aria-controls="doc_talk" data-name="hosAdm" role="tab" data-toggle="tab" class="luntan color"><span class="icon iconfont icon-02_dianpuguanli color" aria-hidden="true" style="margin-left: 33px;"></span>医馆管理
