--- a/pc/online-web/src/main/webapp/web/html/personcenter.html
+++ b/pc/online-web/src/main/webapp/web/html/personcenter.html
@@ -436,7 +436,7 @@
     	<i class="iconfont icon-xiangji"></i>
     </div>
     <div class="name" title="{{name}}">{{name}}</div>
-    <div class="msg0" title="{{info}}" data-maxlengts="11">{{info}}</div>
+    <!--<div class="msg0" title="{{info}}" data-maxlengts="11">{{info}}</div>-->
 </script>
 
 
