--- a/pc/online-web/src/main/webapp/web/html/anchor/curriculum.html
+++ b/pc/online-web/src/main/webapp/web/html/anchor/curriculum.html
@@ -622,7 +622,7 @@
 			<img src="" alt="">
 			<!--<div class="pic" style="width: 80px;height: 80px;border-radius: 50%;"></div>-->
 			<h4 class="nickname"></h4>
-			<p>说点什么来彰显你的个性...</p>
+			<!--<p>说点什么来彰显你的个性...</p>-->
 		</div>
 		<!--左边点击nav-->
 		<!--<div class="select_list z hide">
@@ -678,13 +678,13 @@
 			</ul>
 		</li>
 		<li data-name="menu=3-1">
-			<div class="link"><i class="glyphicon glyphicon-list-alt left_range ino_color"></i>我的收益<i class="fa fa-chevron-down"></i></div>
+			<div class="link"><i class="iconfont icon-wodedingdan left_range ino_color"></i>我的收益<i class="fa fa-chevron-down"></i></div>
 			<ul class="submenu">
 				<li><a class="classResive" onclick="getCourseResiveList(1)" data-name="menu=3-1" href="javascript:;">课程收益</a></li>
 				<li><a class="giftResive" onclick="getGiftResiveList(1)" data-name="menu=3-2" href="javascript:;">礼物收益</a></li>
 			</ul>
 		</li>
-		<li data-name="menu=4-1" ><div class="link"><i class="glyphicon glyphicon-book left_range"></i>账号<i class="fa fa-chevron-down"></i></div>
+		<li data-name="menu=4-1" ><div class="link"><i class="glyphicon glyphicon-user left_range"></i>账号<i class="fa fa-chevron-down"></i></div>
 			<ul class="submenu">
 				<li><a class="name_news" data-name="menu=4-1" href="javascript:;">认证信息</a></li>
 				<li><a class="name_personage" onclick="showAnchorInfo()" data-name="menu=4-2" href="javascript:;">主播信息</a></li>
