资料设置页，隐藏个性签名。课程页，立即学习，修改为进入学习。主播课程页，显示全部课程。

--- a/wechat/src/main/webapp/xcview/html/live_select_album.html
+++ b/wechat/src/main/webapp/xcview/html/live_select_album.html
@@ -185,7 +185,7 @@
 			<img src="../images/video_review.png" />
 		</span>
 	</div>
-	<div class="wrap_all_returned">  <!--渲染存放盒子-->
+	<div class="wrap_all_returned" style="display: none !important;">  <!--渲染存放盒子-->
 		<script type="text/html" id="wrap_people_comment">
 			{{each items as item i}}
 			<div class="wrap_people_comment">
