--- a/wechat/src/main/webapp/xcview/html/persons.html
+++ b/wechat/src/main/webapp/xcview/html/persons.html
@@ -803,7 +803,7 @@ pre:after {
 			</div>
 			
 			<!--<div class="person_cen_top person_sign" onclick="location.href ='signature.html'" style="margin-bottom: 0;border: 0;">-->
-			<div class="person_cen_top person_sign" onclick="jump_style()" style="margin-bottom: 0;border: 0;">
+			<div class="person_cen_top person_sign" onclick="jump_style()" style="margin-bottom: 0;border: 0;display:none;">
 				
 				<p class="person_p1">个性签名</p>
 				<div class="person_cen_right">
