--- a/wechat/src/main/webapp/xcview/html/school_audio.html
+++ b/wechat/src/main/webapp/xcview/html/school_audio.html
@@ -310,7 +310,7 @@
 					<p><span>免费</span></p>
 				</a>-->
 				<a class="right_priceBtn y" href="javascript:;" onclick="btn_zj_mianfei()" data-zj="{{1}}">
-					立即学习
+					进入学习
 				</a>
 <!--有专辑免费2-->
 				{{else if watchState==1 && collection == true}}
@@ -318,7 +318,7 @@
 					<p><span>免费</span></p>
 				</a>-->
 				<a class="right_priceBtn y" href="javascript:;" data-zj="{{2}}" onclick="btn_zj_mianfei()">
-					立即学习
+					进入学习
 				</a>
 <!--//已购买并没有专辑3-->
 	
@@ -327,7 +327,7 @@
 					<p><span>{{currentPrice}}</span>熊猫币</p>
 				</a>-->
 				<a class="right_priceBtn y" href="javascript:;" data-zj="{{3}}" onclick="btn_zj_mianfei()">
-					立即学习
+					进入学习
 				</a>
 <!--//已购买并有专辑4-->			
 				{{else if watchState==2 && collection == true}}
@@ -335,7 +335,7 @@
 					<p><span>{{currentPrice}}</span>熊猫币</p>
 				</a>-->
 				<a class="right_priceBtn y" href="javascript:;" data-zj="{{4}}" onclick="btn_zj_mianfei()">
-					立即学习
+					进入学习
 				</a>
 <!--//主播买并没有专辑5-->			
 				{{else if watchState==3 && collection == false}}
@@ -344,7 +344,7 @@
 
 				</a>-->
 				<a class="right_priceBtn y" href="javascript:;" data-zj="{{5}}" onclick="btn_zj_mianfei()">
-					立即学习
+					进入学习
 				</a>
 <!--//主播并有专辑6-->			
 				{{else if watchState==3 && collection == true}}
@@ -352,7 +352,7 @@
 					<p><span>{{currentPrice}}</span>熊猫币</p>
 				</a>-->
 				<a class="right_priceBtn y" href="javascript:;" data-zj="{{6}}" onclick="btn_zj_mianfei()">
-					立即学习
+					进入学习
 
 				</a>
 				{{/if}}
