设置页修改-密码页修改弹框，提交后的条状。屏蔽-退出登录，解除绑定信息。直播页，立即学习修改。

--- a/wechat/src/main/webapp/xcview/html/lickacc_mobile.html
+++ b/wechat/src/main/webapp/xcview/html/lickacc_mobile.html
@@ -85,17 +85,17 @@
 	</div>
 	
 	<!-- 中间内容结束 -->
-	<div class="success">
+	 <!--<div class="success">
 		<div class="success_bg"></div>
 		<div class="success_main">	
 			<div class="one">确定要解除绑定吗?</div>
 			<div class="three">
-				 <!--<div class="three_btn0 tishi">确定</div>--> 
+				<div class="three_btn0 tishi">确定</div> 
 				<div class="three_btn0" onclick="removeBind()">确定</div>
 				<div class="three_btn1">取消</div>
 			</div>
 		</div>
-	</div>
+	</div>-->
 </body>
 <!-- 刷新引入js -->
 <script src="/xcview/js/common/jquery-2.1.4.min.js" type="text/javascript" charset="utf-8"></script>
