--- a/wechat/src/main/webapp/xcview/html/live_select_album.html
+++ b/wechat/src/main/webapp/xcview/html/live_select_album.html
@@ -15,7 +15,6 @@
 
 <!--手机嵌入模板-->
 <script type="text/javascript" src="/xcview/js/common/layout.js"></script>
-	
 </head>
     
 <body style="background:#F8F8F8;">
@@ -178,14 +177,15 @@
 		
 		</div>
 <!--详情结束-->
+ <div class="hide_discuss" style="display1: none !important;">
 	<!--评论-->
-	<div class="wrap_comment_title" onclick="btn_allComment()" style="display:none;">
+	<div class="wrap_comment_title" onclick="btn_allComment()">
 		<p>评论</p>
 		<span>
 			<img src="../images/video_review.png" />
 		</span>
 	</div>
-	<div class="wrap_all_returned" style="display: none !important;">  <!--渲染存放盒子-->
+	<div class="wrap_all_returned">  <!--渲染存放盒子-->
 		<script type="text/html" id="wrap_people_comment">
 			{{each items as item i}}
 			<div class="wrap_people_comment">
@@ -284,12 +284,12 @@
 		</script>
 	</div>
 	<!--无评论显示的图片-->
-	<!-- <div class="quie_pic" style="display: none !important;">
+	<div class="quie_pic">
 		<img src="../images/no_comment.png"/>	
 		<p>还没有评价？快来抢沙发呀~</p>
-	</div> -->
+	</div>
 	<!--底下评论输入框-->
-	<div class="wrap_user_input" style="display: none !important;">
+	<div class="wrap_user_input">
 		<div class="wrap_input z">
 			<img src="../images/inp_retured.png"/>
 			<span>来点儿神聊</span>
@@ -372,6 +372,7 @@
 			</ul>
 		</script>
 	</div>	
+ </div>
 </div>
 	
 	<!--分享开始-->
