--- a/wechat/src/main/webapp/xcview/html/school_play.html
+++ b/wechat/src/main/webapp/xcview/html/school_play.html
@@ -287,14 +287,14 @@
 					<p><span>免费</span></p>
 				</a>
 				<a class="right_priceBtn y" href="javascript:;" onclick="btn_zj_mianfei()" data-zj="{{1}}">
-					立即学习
+					进入学习
 				</a>
 				{{else if watchState==2 || watchState==3}}
 					<a class="left_price z" href="javascript:;">
 						<p><span>{{currentPrice}}</span>熊猫币</p>
 					</a>
 					<a class="right_priceBtn y" href="javascript:;" onclick="btn_zj_mianfei()" data-zj="{{2}}">
-					立即学习
+					进入学习
 					</a>
 				{{/if}}
 			</div>
