--- a/wechat/src/main/webapp/xcview/html/set.html
+++ b/wechat/src/main/webapp/xcview/html/set.html
@@ -57,7 +57,7 @@
 				关于我们<img src="../images/account05.png" alt="" />
 			</div>
 		</div>
-		<div class="btn">退出登录</div>
+		<div class="btn" style="display: none !important;">退出登录</div>
 	</div>
 	<!-- 中间内容结束 -->
 	<!-- 刷新引入js -->
