--- a/pc/online-web/src/main/webapp/web/html/ResidentHospital.html
+++ b/pc/online-web/src/main/webapp/web/html/ResidentHospital.html
@@ -106,10 +106,10 @@
 								<a href="#doc_Administration" data-name="docAdm" aria-controls="doc_money" role="tab" data-toggle="tab"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>医师管理</a>
 							</li>
 							<li class="hide" id="collect_Administration_tabBtn">
-								<a href="#recruit_Administration" data-name="colAdm" aria-controls="doc_idCard" role="tab" data-toggle="tab"><span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span>招聘管理</a>
+								<a href="#recruit_Administration" data-name="colAdm" aria-controls="doc_idCard" role="tab" data-toggle="tab"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>招聘管理</a>
 							</li>
 							<li class="hide" id="news_Administration_tabBtn">
-								<a href="#Notice_Administration" data-name="newAdm" aria-controls="doc_Distinguish" role="tab" data-toggle="tab"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>公告管理</a>
+								<a href="#Notice_Administration" data-name="newAdm" aria-controls="doc_Distinguish" role="tab" data-toggle="tab"><span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span>公告管理</a>
 							</li>							
 						</ul>
 					</div>
