--- a/pc/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/pc/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -204,7 +204,7 @@
 					<img src="" alt="">
 					<!--<div class="pic" style="width: 80px;height: 80px;border-radius: 50%;"></div>-->
 					<h4></h4>
-					<p>说点什么来彰显你的个性...</p>
+					<!--<p>说点什么来彰显你的个性...</p>-->
 				</div>
 				<!--左边点击nav-->
 				<div class="select_list z">
@@ -220,7 +220,7 @@
 						</li>-->
 						<!--<li class="setTop"><span class="glyphicon glyphicon-user left_range" aria-hidden="true"></span><span>主播工作台</span></li>-->
 						<!--<li class="setTop "><span class="glyphicon glyphicon-user left_range" aria-hidden="true"></span><span>收徒</span></li>-->
-						<li class="setTop docSuccessBtn" data-name="doc_hos" id="docJoinHos"><span class="icon iconfont icon-02_dianpuguanli left_range" aria-hidden="true"></span><span>所在医馆</span></li>
+						<li class="setTop docSuccessBtn" data-name="doc_hos" id="docJoinHos"><span class="icon iconfont icon-02_dianpuguanli left_range" aria-hidden="true"></span><span>医馆</span></li>
 						<li class="setTop" id="nav-colume" data-name="doc_zhuanlan"><span class="glyphicon glyphicon-file left_range" aria-hidden="true"></span><span>专栏</span></li>
 						<li class="setTop" id="nav-work" data-name="doc_book"><span class="glyphicon glyphicon-copyright-mark left_range" aria-hidden="true"></span><span>著作</span></li>
 						<li class="setTop" id="nav-media" data-name="doc_media"><span class="glyphicon glyphicon-film left_range" aria-hidden="true"></span><span>媒体报道</span></li>
