首页的公众号二维码

--- a/pc/online-web/src/main/webapp/index.html
+++ b/pc/online-web/src/main/webapp/index.html
@@ -291,7 +291,7 @@
                     </a>
                 <div class="weibo-hover">
 
-                    <img src="/web/images/125/weiboerweima.png" alt=""/>
+                    <img src="/web/images/sideWeibopng.jpg" alt=""/>
 
                     <p>&nbsp;&nbsp;关注熊猫中医新浪微博获取更多行业即时资讯</p>
                     <img class="indexSanjiao" src="/web/images/125/index03.png" alt=""/>
@@ -301,7 +301,7 @@
                 <img class="weixin" src="/web/images/125/weixin.png" alt=""/>
 
                 <div class="weixin-hover">
-                    <img src="/web/images/125/weixinImg.png" alt=""/>
+                    <img src="/web/images/sideWeixin.jpg" alt=""/>
 
                     <p>关注熊猫中医微信公众号每日获取最新学习资料</p>
                     <img class="indexSanjiao" src="/web/images/125/index03.png" alt=""/>
