修改h5隐藏退出登录功能后，缓存不能即时更新的bug

--- a/wechat/src/main/webapp/xcview/html/amend.html
+++ b/wechat/src/main/webapp/xcview/html/amend.html
@@ -71,9 +71,7 @@
 <!--公用弹框 -->
 <link rel="stylesheet" href="/xcview/css/alert/sharecss.css">
 <script type="text/javascript" src="/xcview/js/common/alertPopShow.js"></script>
-
-
-<script type="text/javascript" src="/xcview/js/amend.js"></script>
+<script type="text/javascript" src="/xcview/js/amend.js?1234511116"></script>
 
 <script type="text/javascript">
 	window.onload = function(){
