--- a/wechat/src/main/webapp/xcview/html/persons.html
+++ b/wechat/src/main/webapp/xcview/html/persons.html
@@ -185,7 +185,9 @@ pre:after {
 	$(document).ready(function(){
         
 		var jobList =[];
-		requestService("/xczh/set/getUserInfo",{userId:localStorage.getItem("userId")},
+		requestService("/xczh/set/getUserInfo",
+				{userId:localStorage.getItem("userId")
+		},
 				function(data) {
 				if (data.success) {
 					commonLocalStorageSetItem(data);
