--- a/wechat/src/main/webapp/xcview/html/my_homepage.html
+++ b/wechat/src/main/webapp/xcview/html/my_homepage.html
@@ -170,7 +170,7 @@
 <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
 <script type="text/javascript" src="/xcview/js/common/common.js?v=wechat_1.1.1"></script>
 <script type="text/javascript" src="/xcview/js/common/template.js"></script>
-<script type="text/javascript" src="/xcview/js/my_homepage.js?v=wechat_1.11111.1"></script>
+<script type="text/javascript" src="/xcview/js/my_homepage.js?v=wechat_1.111111111.1"></script>
 
 
 <script type="text/javascript">
