--- a/pc/online-web/src/main/webapp/web/html/liveVideo.html
+++ b/pc/online-web/src/main/webapp/web/html/liveVideo.html
@@ -32,6 +32,7 @@
 <link href="/web/js/vhall/nihao.css" rel="stylesheet" type="text/css" />
 
 <script src="http://cnstatic01.e.vhall.com/3rdlibs/jquery/1.11.2/jquery.min.js" type="text/javascript"></script>
+<script src="/web/js/common_msg.js" type="text/javascript"></script>
 <script>
 			(function() {
                 if(document.location.host=='www.ipandatcm.com'){
