--- a/wechat/src/main/webapp/xcview/html/my_study.html
+++ b/wechat/src/main/webapp/xcview/html/my_study.html
@@ -70,6 +70,7 @@
 		</ul>
 	</div>
 <!--我的课程-->
+<!-- <p class="my_class_title" data-key='{{items.type}}'>{{items.title}}</p> -->
 <div id="my_class_box">
 	<script type="text/html" id="data_my_class">
 		
