--- a/wechat/src/main/webapp/xcview/html/my_study_course.html
+++ b/wechat/src/main/webapp/xcview/html/my_study_course.html
@@ -15,10 +15,7 @@
 <script type="text/javascript" src="/xcview/js/common/jquery.min-2.1.1.js"></script>
 <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
 <script type="text/javascript" src="/xcview/js/common/common.js"></script>
-
-<!--<script src="/xcview/js/common/jquery-1.8.3.min.js"></script><!--滑动引入js-->
 <script type="text/javascript" src="/xcview/js/common/template.js"></script>
-
 <script type="text/javascript" src="/xcview/js/my_study_course.js?wechat_1.1"></script>
 <script>
 	// 判断横屏展示时的状态
@@ -30,47 +27,37 @@
 	    }
 	}	
 </script>
+<style>
+	.arror_return{
+		width: 0.24rem;
+	    height: 0.42rem;
+	    position: absolute;
+	    left: 0.26rem;
+	    top: 0.23rem;
+	}
+	.arror_return img{
+		width: 100%;
+	    height: 100%;
+	    display: block;
+	}
+</style>
 </head>
     
 <body style="background:#F8F8F8;">
 <div class="wp" style="position: relative;">
 	<div class="wrap-header">
 		<div class="header">		
-			<p>学习</p>
-			<div class="header_news" style="display: none;">
-				<img src="/xcview/images/system_messages.png" alt="">
-				<div class="header_news_rudio">1</div>
+			<p>我的课程</p>
+			<div class="arror_return z" onclick="window.location='/xcview/html/my_study.html'">
+				<img src="../images/back icon.png">
 			</div>
 		</div>
-	</div>
-	<!--播放历史-->
-	<div class="wrap-his-play">
-		<div class="play-title">
-			<span>播放历史</span>
-			<p>清除历史</p>
-		</div>
-		<div class="play_list">
-			<ul id="paly_history">
-			</ul>
-		</div>
-	</div>
-	<!--是否清除历史-->
-	<div class="history_bg">
-		
-	</div>
-	<div class="history_modal">
-		<p>确定清除历史?</p>
-		<ul>
-			<li>取消</li>
-			<li>确定</li>
-		</ul>
 	</div>
 <!--我的课程-->
 <div id="my_class_box">
 	<script type="text/html" id="data_my_class">
 		
 			<div class="wrap_class">
-				<p class="my_class_title">{{items.title}}</p>
 					{{each items.courseList as item i}}
 					<div class="my_class_text" style="position: relative;">
 						{{if item.type == 1 || item.type == 2 }}
@@ -150,57 +137,7 @@
 	<a href="home_page.html">去选课</a>
 </div>	
 	
-<!--关注的主播-->
-	<div class="wrap-follow">
-		<p class="follow_title">关注的主播</p>
-		<div class="follow_people">
-			<ul id="all_follow_people">
-				<script type="text/html" id="data_follow">
-					{{each resultObject as p}}
-						<li onclick="location.href='live_personal.html?userLecturerId={{p.userId}}'">
-							<div class="img_people">
-								<img src="{{p.smallHeadPhoto}}?imageView2/2/w/100"/>
-							</div>
-							<p>{{p.name}}</p>
-						</li>
-					{{/each}}
-				</script>
-			</ul>
-		</div>
-		<div class="no_follow_uesr">
-			<p>您还没有关注的主播~</p>
-		</div>
-	</div>
 	
-<!--底部开始-->
-	<div class="footer_perch"></div>
-	<div class="footer">
-		<ul>
-			<li>
-				<a href="home_page.html" class="footer_one"></a>
-				<p>学堂</p>
-			</li>
-			<li>
-				<a href="" class="footer_two" style="margin-top: 0.13rem; margin-bottom: 0.06rem;background: url(../images/learn_twos.png) no-repeat center;background-size: 0.38rem 0.38rem;"></a>
-				<p style="color: #00BC12;">学习</p>
-			</li>
-			<li>
-				<a href="discovery.html" class="footer_three" style="height: 0.42rem;margin-top: 0.13rem;background: url(../images/discovery_three.png) no-repeat center;background-size: 0.42rem 0.42rem;margin-bottom: 0.04rem;"></a>
-				<p>发现</p>
-			</li>
-			<li>
-				<a href="my_homepage.html" class="footer_four"></a>
-				<p>我的</p>
-			</li>
-		</ul>
-	</div>
-	<!--底部结束-->
-	<!--底部旋转开始-->
-	<div class="rotation_bottom" style="display: none;">
-		<img src="/xcview/images/01_03.png" />
-	</div>
-	<!--底部旋转结束-->
-
 </div>
 	
 </body>
