--- a/pc/online-web/src/main/webapp/classroom.html
+++ b/pc/online-web/src/main/webapp/classroom.html
@@ -283,5 +283,6 @@
 <script type="text/javascript">
     $(function () {
         $('input').placeholder();
+        $(".classroom").css({"color":"#2CB82C"})
     });
 </script>
