--- a/pc/online-web/src/main/webapp/web/html/school/pay-pay.html
+++ b/pc/online-web/src/main/webapp/web/html/school/pay-pay.html
@@ -38,13 +38,42 @@
 			<div class="main-bottom">
 				<h4>选择支付方式</h4>
 				<ul class="select-pay">
-					<li>
+					<li class="select-confirm">
 						<div class="pay-logo">
 							<img src="../../images/pay-panda.png"/>
 						</div>
 						<p>熊猫币</p>
+						<span class="icon-sure"></span>
+					</li>
+					<li>
+						<div class="pay-logo">
+							<img src="../../images/live/alipay.png"/>
+						</div>
+						<p>支付宝</p>
+						<span class="icon-sure hide"></span>
+					</li>
+					<li>
+						<div class="pay-logo">
+							<img src="../../images/live/weixin.png"/>
+						</div>
+						<p>微信</p>
+						<span class="icon-sure hide"></span>
 					</li>
 				</ul>
+				<p class="balance cl">余额：20熊猫币</p>
+			</div>
+	<!--去充值-->
+			<div class="recharge-box">
+				<button type="button">余额不足，去充值</button>
+			</div>
+	<!--去支付-->
+			<div class="pay-box">
+				<button type="button">去支付</button>
+			</div>
+	<!--同意用户协议-->
+			<div class="agreement-box">
+				<p><em></em><span>我已阅读并同意</span></p>
+				<span class="agreement-content"><a href="/web/html/payment_agree.html" target="_blank">《熊猫中医云课堂用户付费协议》</a></span>
 			</div>
 		</div>
 
