直播间添加关注增加时间

--- a/pc/online-web/src/main/webapp/web/html/liveVideo.html
+++ b/pc/online-web/src/main/webapp/web/html/liveVideo.html
@@ -425,7 +425,8 @@
 								<span></span>
 							</div>
 						</div>
-						<div class="concern-right concern-click"></div>
+						<!--<div class="concern-right concern-click"></div>-->
+						<button type="button" class="concern-right concern-click"></button>
 					</div>
 					<!--右侧礼物区-->
 					<div class="surprise">
