--- a/wechat/src/main/webapp/xcview/html/persons.html
+++ b/wechat/src/main/webapp/xcview/html/persons.html
@@ -178,7 +178,7 @@ pre:after {
 </style>
 <link href="/xcview/css/picker.css" rel="stylesheet" />
 
-<script src="/xcview/js/mui_city.js"></script>
+<script src="/xcview/js/common/mui_city.js"></script>
 
 <!-- 选项卡 -->
 <script type="text/javascript">
