--- a/pc/online-web/src/main/webapp/web/html/personcenter.html
+++ b/pc/online-web/src/main/webapp/web/html/personcenter.html
@@ -622,7 +622,7 @@
 <script src='../js/PersonAsset.js?v=ipandatcm_1.3.1'></script>
 <script src="/web/js/chongZhi.js" type="text/javascript" charset="utf-8"></script>
 <script src="/web/js/usualAddress.js?v=ipandatcm_1.3" type="text/javascript" charset="utf-8"></script>
-<script src="/web/js/common/data.provinces.js"></script>
+<script src="/web/js/common/data.provinces2.js"></script>
 <script src="/web/js/common/provinces-selector.js"></script>
 <script src="/web/js/common_msg.js" type="text/javascript"></script>
 <script type="text/javascript">
