--- a/pc/online-web/src/main/webapp/web/html/school/pay-success.html
+++ b/pc/online-web/src/main/webapp/web/html/school/pay-success.html
@@ -42,6 +42,107 @@
 				<p class="z study-core">查看已购课程，<a href="">请前往学习中心</a></p>
 				<p class="z class-list">继续寻找感兴趣的课程，<a href="">请前往学堂</a></p>
 			</div>
+			<!--猜你喜欢-->
+			<div class="main-bottom">
+				<h4 class="video-title">猜你喜欢</h4>
+				<div class="course clearfix">
+					<!--<img style="position:absolute;width: 16%;top:-2px;left:-2px;z-index:999" src="/web/images/recommend2.png">-->
+					<a style="cursor:pointer" href="/course/courses/611" target="_blank">
+						<div class="img">
+							<img src="https://file.ipandatcm.com/data/attachment/online/2018/03/17/14/f8b9b157ae4e4b9d9730607ecdcdac71.png">
+						</div>
+						<!--<span class="classCategory">音频</span>-->
+						<div class="detail">
+							<p class="title" data-text="音频测试3" title="音频测试3">音频测试3</p>
+							<p class="timeAndTeac"><span>讲师：<span class="teacher">雪灵</span></span>
+							</p>
+							<p class="info clearfix">
+								<span>
+									<span class="price">1</span>
+									<span>熊猫币</span>
+								</span>
+								<span class="stuCount">
+									<img src="/web/images/studentCount.png" alt="">
+									<span class="studentCou">15</span>
+								</span>
+							</p>
+						</div>
+					</a>
+				</div>
+				<div class="course clearfix">
+					<!--<img style="position:absolute;width: 16%;top:-2px;left:-2px;z-index:999" src="/web/images/recommend2.png">-->
+					<a style="cursor:pointer" href="/course/courses/611" target="_blank">
+						<div class="img">
+							<img src="https://file.ipandatcm.com/data/attachment/online/2018/03/17/14/f8b9b157ae4e4b9d9730607ecdcdac71.png">
+						</div>
+						<!--<span class="classCategory">音频</span>-->
+						<div class="detail">
+							<p class="title" data-text="音频测试3" title="音频测试3">音频测试3</p>
+							<p class="timeAndTeac"><span>讲师：<span class="teacher">雪灵</span></span>
+							</p>
+							<p class="info clearfix">
+								<span>
+									<span class="price">1</span>
+									<span>熊猫币</span>
+								</span>
+								<span class="stuCount">
+									<img src="/web/images/studentCount.png" alt="">
+									<span class="studentCou">15</span>
+								</span>
+							</p>
+						</div>
+					</a>
+				</div>
+				<div class="course clearfix">
+					<!--<img style="position:absolute;width: 16%;top:-2px;left:-2px;z-index:999" src="/web/images/recommend2.png">-->
+					<a style="cursor:pointer" href="/course/courses/611" target="_blank">
+						<div class="img">
+							<img src="https://file.ipandatcm.com/data/attachment/online/2018/03/17/14/f8b9b157ae4e4b9d9730607ecdcdac71.png">
+						</div>
+						<!--<span class="classCategory">音频</span>-->
+						<div class="detail">
+							<p class="title" data-text="音频测试3" title="音频测试3">音频测试3</p>
+							<p class="timeAndTeac"><span>讲师：<span class="teacher">雪灵</span></span>
+							</p>
+							<p class="info clearfix">
+								<span>
+									<span class="price">1</span>
+									<span>熊猫币</span>
+								</span>
+								<span class="stuCount">
+									<img src="/web/images/studentCount.png" alt="">
+									<span class="studentCou">15</span>
+								</span>
+							</p>
+						</div>
+					</a>
+				</div>
+				<div class="course clearfix">
+					<!--<img style="position:absolute;width: 16%;top:-2px;left:-2px;z-index:999" src="/web/images/recommend2.png">-->
+					<a style="cursor:pointer" href="/course/courses/611" target="_blank">
+						<div class="img">
+							<img src="https://file.ipandatcm.com/data/attachment/online/2018/03/17/14/f8b9b157ae4e4b9d9730607ecdcdac71.png">
+						</div>
+						<!--<span class="classCategory">音频</span>-->
+						<div class="detail">
+							<p class="title" data-text="音频测试3" title="音频测试3">音频测试3</p>
+							<p class="timeAndTeac"><span>讲师：<span class="teacher">雪灵</span></span>
+							</p>
+							<p class="info clearfix">
+								<span>
+									<span class="price">1</span>
+									<span>熊猫币</span>
+								</span>
+								<span class="stuCount">
+									<img src="/web/images/studentCount.png" alt="">
+									<span class="studentCou">15</span>
+								</span>
+							</p>
+						</div>
+					</a>
+				</div>
+				
+			</div>
 		</div>
 		
 		
