修改弹框提示：免费礼物只能送三个

--- a/wechat/src/main/webapp/xcview/html/details.html
+++ b/wechat/src/main/webapp/xcview/html/details.html
@@ -37,6 +37,9 @@ $(function(){
 <link rel="stylesheet" href="/xcview/css/style.css?version=eede15a77a&version=eede15a11177a&version=eede15a77a">
 
 <link rel="stylesheet" type="text/css" href="/xcview/css/details_style.css?version=55321119d52d7&version=55329d52d7&version=55329d52d7"/>
+
+<!--公用弹框 -->
+<link rel="stylesheet" href="/xcview/css/alert/sharecss.css">
 <style>
 
 .leaderboard .leaderboard_list:last-child{
@@ -573,6 +576,8 @@ $(function(){
 <script src="/xcview/weihoujs/jquery.min.js"></script>
 <script type="text/JavaScript" src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
 <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
+
+<script type="text/javascript" src="/xcview/js/common/alertPopShow.js"></script>
 <!-- <link rel="stylesheet" href="/xcview/css/yangxuan.css"> -->
 <!--这段meta代码需要加上，移动端自适应缩放用-->
 <!--这段JS就是自动检测窗口尺寸大小的，动态改变html的font-size的大小-->
