--- a/wechat/src/main/webapp/xcview/html/my_study.html
+++ b/wechat/src/main/webapp/xcview/html/my_study.html
@@ -76,9 +76,9 @@
 		
 			<div class="wrap_class">
 				{{if items.title=="我的课程"}}
-				<p class="my_class_title"><a href="my_study_course.html">{{items.title}}</a></p>
+				<p class="my_class_title"><a href="my_study_course.html" style="color: #000;">{{items.title}}</a></p>
 				{{else}}
-				<p class="my_class_title"><a href="end_the_course.html">{{items.title}}</a></p>
+				<p class="my_class_title"><a href="end_the_course.html" style="color: #000;">{{items.title}}</a></p>
 				{{/if}}
 					{{each items.courseList as item i}}
 					<div class="my_class_text" style="position: relative;">
