新页面医师，医馆详情

--- a/pc/online-web/src/main/webapp/web/html/school/anchor-details.html
+++ b/pc/online-web/src/main/webapp/web/html/school/anchor-details.html
@@ -19,45 +19,29 @@
 			<link rel="stylesheet" href="/web/css/mylogin.css" />
 			<link href="/web/bootstrap-select/bootstrap.min.css" rel="stylesheet">
 			<link rel="stylesheet" type="text/css" href="/web/bootstrap-select/bootstrap-select.css">
-		<!--登陆的bootstrap样式-->
-			<link rel="stylesheet" href="/web/css/school/details-live.css"  />
+		<!--登陆的bootstrap样式结束-->
+			<link rel="stylesheet" href="/web/css/school/anchor-details.css"  />
 	</head>
 	<body>
-		<div class="wp">
-			<div class="wrap-buy">
-				<div class="left-cover z">
-					<img src="../../images/banner-wrap.jpg"/>
-					<span>直播中</span>
+		<div class="wrap-top">
+			<div class="main-top">
+				<div class="head-portrait z">
+					<img src="../../images/criticism_img.png"/>
 				</div>
-				<div class="right-details y">
-					<h4>全息-藏在人体中的奥妙</h4>
-					<p class="subtitle">一句话简介，就是副标题吧，副标题控制在30字符内哦啊哈哈哈哈或</p>
-					<ul class="author-inf">
-						<li>
-							<span>主讲人：可乐</span>
-						</li>
-						<li class="grade">
-							<img src="../../images/star.png"/>
-						</li>
-						<li>
-							<span>200条评论</span>
-						</li>
+				<div class="anchor-status z">
+					<h2>李辅仁</h2>
+					<h4>北京四大名医</h4>
+					<ul class="follow-box cl">
+						<li>关注20</li>
+						<li>|</li>
+						<li>粉丝2000</li>
 					</ul>
-					<div class="display-price">
-						<div class="live-price">
-							<span>价</span>
-							<span>格</span>
-						</div>
-						<p><span>200</span>熊猫币</p>
-						<ul>
-							<li>直播时间</li>
-							<li>2018.02.23 12:00</li>
-						</ul>
-					</div>
-					<button type="button" class="immediately-buy">立即购买</button>
+					<button type="button" class="isAdd-follow"><img src="../../images/icon-up.png"/><span>加关注</span></button>
 				</div>
 			</div>
+		</div>
 		
+		<div class="wp">
 			<div class="main">
 		<!--左侧详情/评价/常见问题-->
 				<div class="content-inf z">
@@ -216,15 +200,10 @@
 							</li>
 						</ul>
 					</div>
+			
+				
 				</div>
 		
-			
-			
-			
-			
-			
-			
-			
 			
 		<!--右侧推荐课程-->
 				<div class="wrap-recommend y">
@@ -259,7 +238,7 @@
 			</div>	
 		</div>
 		
-<!--发表评论弹窗-->
+		<!--发表评论弹窗-->
 		<div class="bg-modal hide"></div>
 		<div class="wrap-modal hide">
 			<p class="close-impression">
@@ -304,10 +283,16 @@
 			</ul>
 			<textarea class="impression-text" name="" rows="" cols="" placeholder="写评价给主播鼓励一下吧~"></textarea>
 			<button class="submission" type="button">发表评价</button>
-		</div>
-
-
-
+		</div>	
+		
+		
+		
+		
+		
+		
+		
+		
+	
 		<script src="/web/js/jquery-1.12.1.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript" src="/web/js/artTemplate.js"></script>	
 		<script src="/web/js/bootstrap.js" type="text/javascript" charset="utf-8"></script>
@@ -321,7 +306,7 @@
 			<script type="text/javascript" src="/web/js/jquery.SuperSlide.2.1.1.js"></script>
 			<script src="/web/js/bootstrap.js" type="text/javascript" charset="utf-8"></script>
 		<!--登陆结束-->	
-			<script src="/web/js/school/details-live.js" type="text/javascript" charset="utf-8"></script>
+			<script src="/web/js/school/anchor-details.js" type="text/javascript" charset="utf-8"></script>
 			
 	</body>
 		
