主播优化--学习

--- a/wechat/src/main/webapp/xcview/html/my_study.html
+++ b/wechat/src/main/webapp/xcview/html/my_study.html
@@ -30,6 +30,22 @@
 	    }
 	}	
 </script>
+
+<style>
+	.follow_people{
+		white-space: nowrap;
+	    overflow-x: auto;
+	    overflow-y: hidden;
+	}
+	#all_follow_people{
+		display: flex;
+	}
+	.follow_people ul li{
+		display: table-caption;
+    	padding-right: 0.49rem;
+    	margin-right: 0;
+	}
+</style>
 	
 	<!--公用弹框 -->
 <!--<link rel="stylesheet" href="/xcview/css/alert/sharecss.css">
@@ -180,6 +196,8 @@
 			<p>您还没有关注的主播~</p>
 		</div>
 	</div>
+
+
 	
 <!--底部开始-->
 	<div class="footer_perch"></div>
