--- a/pc/online-web/src/main/webapp/web/html/school/anchor-details.html
+++ b/pc/online-web/src/main/webapp/web/html/school/anchor-details.html
@@ -48,38 +48,104 @@
 		<!--nav-->
 					<div class="wrap-sidebar">
 						<ul>
-							<li class="active-footer">详情</li>
+							<li class="active-footer">课程</li>
+							<li>介绍</li>
 							<li>评价（200）</li>
-							<li>常见问题</li>
 						</ul>
 					</div>
 		<!--content-->
-		<!--主讲人-->
-					<div class="sidebar-content">
-						<div class="author-introduce">
-							主讲人
-						</div>
-						<div class="author-content">
-							<div class="author-text">
-								我的我的我的我的我的我的我的我的我的我的我的我的
-								我的我的我的我的我的我的我的我的我的我的我的我的
-								我的我的我的我的我的我的我的我的我的我的我的
-								我的我的我的我的我的我的我的我的我的我的我的我的
-								我的我的我的我的我的我的我的我的我的我的我的我的
-								我的我的我的我的我的我的我的我的我的我的我的		
+		<!--课程-->
+					<div class="sidebar-content" style="padding: 0 0 30px;">
+						<div class="wrap-class">
+							<div class="course clearfix">
+								<img style="position:absolute;width: 16%;top:-2px;left:-2px;z-index:999" src="/web/images/recommend2.png">
+								<a style="cursor:pointer" href="/course/courses/611" target="_blank">
+									<div class="img"><img src="https://file.ipandatcm.com/data/attachment/online/2018/03/17/14/f8b9b157ae4e4b9d9730607ecdcdac71.png"></div><span class="classCategory">视频专辑</span>
+									<div class="detail">
+										<p class="title" data-text="音频测试3" title="音频测试3">音频测试3</p>
+										<p class="timeAndTeac"><span>讲师：<span class="teacher">雪灵</span></span>
+										</p>
+										<p class="info clearfix"><span><span class="price">1</span><span>熊猫币</span></span><span class="stuCount"><img src="/web/images/studentCount.png" alt=""><span class="studentCou">15</span></span>
+										</p>
+									</div>
+								</a>
+							</div>		
+							<div class="course clearfix">
+								<img style="position:absolute;width: 16%;top:-2px;left:-2px;z-index:999" src="/web/images/recommend2.png">
+								<a style="cursor:pointer" href="/course/courses/611" target="_blank">
+									<div class="img"><img src="https://file.ipandatcm.com/data/attachment/online/2018/03/17/14/f8b9b157ae4e4b9d9730607ecdcdac71.png"></div><span class="classCategory">线下课程</span>
+									<div class="detail">
+										<p class="title" data-text="音频测试3" title="音频测试3">音频测试3</p>
+										<p class="timeAndTeac"><span>讲师：<span class="teacher">雪灵</span></span>
+										</p>
+										<p class="info clearfix"><span><span class="price">1</span><span>熊猫币</span></span><span class="stuCount"><img src="/web/images/studentCount.png" alt=""><span class="studentCou">15</span></span>
+										</p>
+									</div>
+								</a>
+							</div>
+							<div class="course clearfix">
+								<img style="position:absolute;width: 16%;top:-2px;left:-2px;z-index:999" src="/web/images/recommend2.png">
+								<a style="cursor:pointer" href="/course/courses/611" target="_blank">
+									<div class="img"><img src="https://file.ipandatcm.com/data/attachment/online/2018/03/17/14/f8b9b157ae4e4b9d9730607ecdcdac71.png"></div><span class="classCategory">直播中</span>
+									<div class="detail">
+										<p class="title" data-text="音频测试3" title="音频测试3">音频测试3</p>
+										<p class="timeAndTeac"><span>讲师：<span class="teacher">雪灵</span></span>
+										</p>
+										<p class="info clearfix"><span><span class="price">1</span><span>熊猫币</span></span><span class="stuCount"><img src="/web/images/studentCount.png" alt=""><span class="studentCou">15</span></span>
+										</p>
+									</div>
+								</a>
+							</div>
+							<div class="course clearfix">
+								<img style="position:absolute;width: 16%;top:-2px;left:-2px;z-index:999" src="/web/images/recommend2.png">
+								<a style="cursor:pointer" href="/course/courses/611" target="_blank">
+									<div class="img"><img src="https://file.ipandatcm.com/data/attachment/online/2018/03/17/14/f8b9b157ae4e4b9d9730607ecdcdac71.png"></div><span class="classCategory">视频专辑</span>
+									<div class="detail">
+										<p class="title" data-text="音频测试3" title="音频测试3">音频测试3</p>
+										<p class="timeAndTeac"><span>讲师：<span class="teacher">雪灵</span></span>
+										</p>
+										<p class="info clearfix"><span><span class="price">1</span><span>熊猫币</span></span><span class="stuCount"><img src="/web/images/studentCount.png" alt=""><span class="studentCou">15</span></span>
+										</p>
+									</div>
+								</a>
 							</div>
 						</div>
-						<div class="author-introduce" style="margin-top: 30px;">
-							课程简介
+					</div>
+		
+		<!--介绍-->					
+					<div class="sidebar-content hide" style="background: #F8F8F8;padding: 0;">
+						<div class="anchor-introduce">
+							<p>
+								施今墨（1881.3.28～1969.8.22），原名毓黔，字奖生，祖籍浙江省杭州市萧山区，中国近代中医临床家、教育家、改革家，“北京四大名医”之一。
+								施今墨毕生致力于中医事业的发展。提倡中西医结合，培养了许多中医人才。长期从事中医临床，治愈了许多疑难重症，创制了许多新成药，献出700个验方。为中医事业作出突出贡献，在国内外享有很高的声望。
+							</p>
 						</div>
-						<div class="author-content">
-							<div class="class-text">
-								我的我的我的我的我的我的我的我的我的我的我的我的
-								我的我的我的我的我的我的我的我的我的我的我的我的
-								我的我的我的我的我的我的我的我的我的我的我的
-								我的我的我的我的我的我的我的我的我的我的我的我的
-								我的我的我的我的我的我的我的我的我的我的我的我的
-								我的我的我的我的我的我的我的我的我的我的我的		
+						<div class="anchor-hospital">
+							<h5>坐诊医馆</h5>
+							<div class="hospital-img z">
+								<img src="../../images/04.png"/>
+							</div>
+							<div class="hospital-inf y">
+								<div class="hospital-status">
+									<p>医馆名称：胡庆余堂杭州店</p>
+									<p>预约电话：400-800-9999</p>
+									<p>坐诊时间：周一、周二、周三、周四、周五</p>
+								</div>
+								<div class="address-box">
+									<p class="address z">
+										<span>地</span>
+										<span>址：</span>
+									</p>
+									<p class="address-text z">
+										杭州市下城区绍兴路164号和平购物中心浙江省杭州市浙江省杭州市下城区绍兴路164号和平购物中心浙江省杭州市下城区绍兴路
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="anchor-video">
+							<h5>主播视频介绍</h5>
+							<div class="save-video">
+								<img src="../../images/04.png" style="width: 460px; height: 260px;"/>
 							</div>
 						</div>
 					</div>
@@ -179,28 +245,6 @@
 			<!--一个完整的评论内容结束-->
 						</div>	
 					</div>
-		<!--常见问题-->					
-					<div class="sidebar-content hide">
-						<ul class="often-problem">
-							<li>
-								<h5>视频可以多次重复观看吗？</h5>
-								<p>我们的视频均可以进行多次重复观看，观众可根据自己的时间对学习过程进行安排，最大化地利用时间。</p>
-							</li>
-							<li>
-								<h5>视频可以多次重复观看吗？</h5>
-								<p>我们的视频均可以进行多次重复观看，观众可根据自己的时间对学习过程进行安排，最大化地利用时间。</p>
-							</li>
-							<li>
-								<h5>视频可以多次重复观看吗？</h5>
-								<p>我们的视频均可以进行多次重复观看，观众可根据自己的时间对学习过程进行安排，最大化地利用时间。</p>
-							</li>
-							<li>
-								<h5>视频可以多次重复观看吗？</h5>
-								<p>我们的视频均可以进行多次重复观看，观众可根据自己的时间对学习过程进行安排，最大化地利用时间。</p>
-							</li>
-						</ul>
-					</div>
-			
 				
 				</div>
 		
@@ -209,9 +253,12 @@
 				<div class="wrap-recommend y">
 					<h3>推荐课程</h3>
 					<div class="course clearfix">
-						<img style="position:absolute;width: 16%;top:-2px;left:-2px;z-index:999" src="/web/images/recommend2.png">
+						<!--<img style="position:absolute;width: 16%;top:-2px;left:-2px;z-index:999" src="/web/images/recommend2.png">-->
 						<a style="cursor:pointer" href="/course/courses/611" target="_blank">
-							<div class="img"><img src="https://file.ipandatcm.com/data/attachment/online/2018/03/17/14/f8b9b157ae4e4b9d9730607ecdcdac71.png"></div><span class="classCategory">音频</span>
+							<div class="img">
+								<img src="https://file.ipandatcm.com/data/attachment/online/2018/03/17/14/f8b9b157ae4e4b9d9730607ecdcdac71.png">
+							</div>
+							<!--<span class="classCategory">音频</span>-->
 							<div class="detail">
 								<p class="title" data-text="音频测试3" title="音频测试3">音频测试3</p>
 								<p class="timeAndTeac"><span>讲师：<span class="teacher">雪灵</span></span>
@@ -222,9 +269,12 @@
 						</a>
 					</div>	
 					<div class="course clearfix">
-						<img style="position:absolute;width: 16%;top:-2px;left:-2px;z-index:999" src="/web/images/recommend2.png">
+						<!--<img style="position:absolute;width: 16%;top:-2px;left:-2px;z-index:999" src="/web/images/recommend2.png">-->
 						<a style="cursor:pointer" href="/course/courses/611" target="_blank">
-							<div class="img"><img src="https://file.ipandatcm.com/data/attachment/online/2018/03/17/14/f8b9b157ae4e4b9d9730607ecdcdac71.png"></div><span class="classCategory">音频</span>
+							<div class="img">
+								<img src="https://file.ipandatcm.com/data/attachment/online/2018/03/17/14/f8b9b157ae4e4b9d9730607ecdcdac71.png">
+							</div>
+							<!--<span class="classCategory">音频</span>-->
 							<div class="detail">
 								<p class="title" data-text="音频测试3" title="音频测试3">音频测试3</p>
 								<p class="timeAndTeac"><span>讲师：<span class="teacher">雪灵</span></span>
