--- a/wechat/src/main/webapp/xcview/html/course_list.html
+++ b/wechat/src/main/webapp/xcview/html/course_list.html
@@ -49,7 +49,7 @@
 
 	<!-- 中间内容开始 -->
 	<!-- <div class="a">标题</div> -->
-		<!--<div id="refreshContainer" class="mui-content mui-scroll-wrapper">-->
+		<div id="refreshContainer" class="mui-content mui-scroll-wrapper">
 		  <div class="mui-scroll">
 		   	    <!--数据列表-->
 		   	    <!--列表内容开始-->
@@ -61,13 +61,15 @@
 				   	    			<!--跳转-->
 				   	    			{{if item.type == 1 || item.type == 2}}
 		                    			<a style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; z-index: 999;display: block;width: 3.39rem;height: 3.25rem;" 
-											onclick="common_jump_school({{item.watchState}},{{item.type}},{{item.collection?1:0}},{{item.id}})"></a>
+											class="common_jump_school" data-watchState="{{item.watchState}}" data-type="{{item.type}}" data-collection="{{item.collection?1:0}}"
+										   data-id="{{item.id}}" ></a>
 	                    				{{else if item.type == 3}}
-		                    			<a style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; z-index: 999;display: block;width: 3.39rem;height: 3.25rem;" 
-												onclick="common_jump_all({{item.id}})"></a>
+		                    			<a style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; z-index: 999;display: block;width: 3.39rem;height: 3.25rem;"
+										   class="common_jump_all" data-id="{{item.id}}" ></a>
 		                    			{{else if item.type == 4}}
-		                    			<a style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; z-index: 999;display: block;width: 3.39rem;height: 3.25rem;" 
-											onclick="common_jump_school({{item.watchState}},{{item.type}},{{item.collection?1:0}},{{item.id}})"></a>
+		                    			<a style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; z-index: 999;display: block;width: 3.39rem;height: 3.25rem;"
+										   class="common_jump_school" data-watchState="{{item.watchState}}" data-type="{{item.type}}" data-collection="{{item.collection?1:0}}"
+										   data-id="{{item.id}}" class="common_jump_school" ></a>
 									{{/if}}
 				   	    			<!--视频/音频/直播/线下课判断-->
 				   	    			<div class="course_list_one_img">
@@ -120,7 +122,7 @@
 		   	    <!--列表内容结束-->
 			    <div class=""></div>
 		  </div>
-		<!--</div>-->
+		</div>
 	<!--</div>-->
 	<!-- 中间内容结束 -->
 	<!-- 底部结束 -->
@@ -137,5 +139,8 @@
 	<script src="/xcview/js/course_list.js?version=d5b228b68f" type="text/javascript"></script>
 	<!-- 公共跳转的 -->
 	<script type="text/javascript" src="/xcview/js/common/commonJumpPlay.js"></script>
+	<!--刷新 -->
+	<link rel="stylesheet" href="/xcview/css/mescroll.min.css">
+	<script type="text/javascript" src="/xcview/js/common/mescroll.min.js"></script>
 </html>
 
