--- a/pc/online-web/src/main/webapp/web/html/school/anchor-hospital.html
+++ b/pc/online-web/src/main/webapp/web/html/school/anchor-hospital.html
@@ -20,18 +20,18 @@
 			<link href="/web/bootstrap-select/bootstrap.min.css" rel="stylesheet">
 			<link rel="stylesheet" type="text/css" href="/web/bootstrap-select/bootstrap-select.css">
 		<!--登陆的bootstrap样式结束-->
-			<link rel="stylesheet" href="/web/css/school/anchor-details.css"  />
+			<link rel="stylesheet" href="/web/css/school/anchor-hospital.css"  />
 	</head>
 	<body>
 		<div class="wrap-top">
 			<div class="main-top">
 				<div class="head-portrait z">
-					<img src="../../images/criticism_img.png"/>
+					<img src="../../images/app_anchor.png"/>
 					<span></span>
 				</div>
 				<div class="anchor-status z">
-					<h2>李辅仁</h2>
-					<h4>北京四大名医</h4>
+
+					<h4>同仁堂安贞分部</h4>
 					<ul class="follow-box cl">
 						<li>关注20</li>
 						<li>|</li>
@@ -122,15 +122,13 @@
 							</p>
 						</div>
 						<div class="anchor-hospital">
-							<h5>坐诊医馆</h5>
+							<h5>医馆地址</h5>
 							<div class="hospital-img z">
 								<img src="../../images/04.png"/>
 							</div>
 							<div class="hospital-inf y">
 								<div class="hospital-status">
-									<p>医馆名称：胡庆余堂杭州店</p>
 									<p>预约电话：400-800-9999</p>
-									<p>坐诊时间：周一、周二、周三、周四、周五</p>
 								</div>
 								<div class="address-box">
 									<p class="address z">
@@ -264,15 +262,7 @@
 								<p class="title" data-text="音频测试3" title="音频测试3">音频测试3</p>
 								<p class="timeAndTeac"><span>讲师：<span class="teacher">雪灵</span></span>
 								</p>
-								<p class="info clearfix">
-									<span>
-										<span class="price">1</span>
-										<span>熊猫币</span>
-									</span>
-									<span class="stuCount">
-										<img src="/web/images/studentCount.png" alt="">
-										<span class="studentCou">15</span>
-									</span>
+								<p class="info clearfix"><span><span class="price">1</span><span>熊猫币</span></span><span class="stuCount"><img src="/web/images/studentCount.png" alt=""><span class="studentCou">15</span></span>
 								</p>
 							</div>
 						</a>
@@ -288,15 +278,7 @@
 								<p class="title" data-text="音频测试3" title="音频测试3">音频测试3</p>
 								<p class="timeAndTeac"><span>讲师：<span class="teacher">雪灵</span></span>
 								</p>
-								<p class="info clearfix">
-									<span>
-										<span class="price">1</span>
-										<span>熊猫币</span>
-									</span>
-									<span class="stuCount">
-										<img src="/web/images/studentCount.png" alt="">
-										<span class="studentCou">15</span>
-									</span>
+								<p class="info clearfix"><span><span class="price">1</span><span>熊猫币</span></span><span class="stuCount"><img src="/web/images/studentCount.png" alt=""><span class="studentCou">15</span></span>
 								</p>
 							</div>
 						</a>
@@ -373,7 +355,7 @@
 			<script type="text/javascript" src="/web/js/jquery.SuperSlide.2.1.1.js"></script>
 			<script src="/web/js/bootstrap.js" type="text/javascript" charset="utf-8"></script>
 		<!--登陆结束-->	
-			<script src="/web/js/school/anchor-details.js" type="text/javascript" charset="utf-8"></script>
+			<script src="/web/js/school/anchor-hospital.js" type="text/javascript" charset="utf-8"></script>
 			
 	</body>
 		
