--- a/pc/online-web/src/main/webapp/web/html/school/curriculum-list.html
+++ b/pc/online-web/src/main/webapp/web/html/school/curriculum-list.html
@@ -17,7 +17,7 @@
 		<!--公共头部和底部样式结束-->
 		<!--登陆的bootstrap样式-->
 			<link rel="stylesheet" href="/web/css/mylogin.css" />
-			<link href="/web/bootstrap-select/bootstrap.min.css" rel="stylesheet">
+			<link href="/web/css/bootstrap.min.css" rel="stylesheet">
 			<link rel="stylesheet" type="text/css" href="/web/bootstrap-select/bootstrap-select.css">
 		<!--登陆的bootstrap样式-->
 			<link rel="stylesheet" href="/web/css/school/curriculum-list.css"  />
@@ -104,11 +104,14 @@
 					</ul>
 					<div class="tab-price z">
 						<p>价格</p>
+						<span class="glyphicon glyphicon-menu-up tab-top" aria-hidden="true"></span>
+						<span class="glyphicon glyphicon-menu-down tab-bottom" aria-hidden="true"></span>
+						
 					</div>
 				</div>
 				<div class="wrap-video">				
 					<div class="course clearfix">
-						<img style="position:absolute;width: 16%;top:-2px;left:-2px;z-index:999" src="/web/images/recommend2.png">
+						<!--<img style="position:absolute;width: 16%;top:-2px;left:-2px;z-index:999" src="/web/images/recommend2.png">-->
 						<a style="cursor:pointer" href="details-video.html">
 							<div class="img"><img src="https://file.ipandatcm.com/data/attachment/online/2018/03/17/14/f8b9b157ae4e4b9d9730607ecdcdac71.png"></div><span class="classCategory">音频</span>
 							<div class="detail">
@@ -121,7 +124,7 @@
 						</a>
 					</div>
 					<div class="course clearfix">
-						<img style="position:absolute;width: 16%;top:-2px;left:-2px;z-index:999" src="/web/images/recommend2.png">
+						<!--<img style="position:absolute;width: 16%;top:-2px;left:-2px;z-index:999" src="/web/images/recommend2.png">-->
 						<a style="cursor:pointer" href="/course/courses/611" target="_blank">
 							<div class="img"><img src="https://file.ipandatcm.com/data/attachment/online/2018/03/17/14/f8b9b157ae4e4b9d9730607ecdcdac71.png"></div><span class="classCategory">音频</span>
 							<div class="detail">
@@ -134,7 +137,7 @@
 						</a>
 					</div>
 					<div class="course clearfix">
-						<img style="position:absolute;width: 16%;top:-2px;left:-2px;z-index:999" src="/web/images/recommend2.png">
+						<!--<img style="position:absolute;width: 16%;top:-2px;left:-2px;z-index:999" src="/web/images/recommend2.png">-->
 						<a style="cursor:pointer" href="/course/courses/611" target="_blank">
 							<div class="img"><img src="https://file.ipandatcm.com/data/attachment/online/2018/03/17/14/f8b9b157ae4e4b9d9730607ecdcdac71.png"></div><span class="classCategory">音频</span>
 							<div class="detail">
@@ -147,7 +150,7 @@
 						</a>
 					</div>
 					<div class="course clearfix">
-						<img style="position:absolute;width: 16%;top:-2px;left:-2px;z-index:999" src="/web/images/recommend2.png">
+						<!--<img style="position:absolute;width: 16%;top:-2px;left:-2px;z-index:999" src="/web/images/recommend2.png">-->
 						<a style="cursor:pointer" href="/course/courses/611" target="_blank">
 							<div class="img"><img src="https://file.ipandatcm.com/data/attachment/online/2018/03/17/14/f8b9b157ae4e4b9d9730607ecdcdac71.png"></div><span class="classCategory">音频</span>
 							<div class="detail">
@@ -160,9 +163,9 @@
 						</a>
 					</div>
 					<div class="course clearfix">
-						<img style="position:absolute;width: 16%;top:-2px;left:-2px;z-index:999" src="/web/images/recommend2.png">
+						<!--<img style="position:absolute;width: 16%;top:-2px;left:-2px;z-index:999" src="/web/images/recommend2.png">-->
 						<a style="cursor:pointer" href="/course/courses/611" target="_blank">
-							<div class="img"><img src="https://file.ipandatcm.com/data/attachment/online/2018/03/17/14/f8b9b157ae4e4b9d9730607ecdcdac71.png"></div><span class="classCategory">音频</span>
+							<div class="img"><img src="https://file.ipandatcm.com/data/attachment/online/2018/03/17/14/f8b9b157ae4e4b9d9730607ecdcdac71.png"></div><span class="classCategory">视频专辑</span>
 							<div class="detail">
 								<p class="title" data-text="音频测试3" title="音频测试3">音频测试3</p>
 								<p class="timeAndTeac"><span>讲师：<span class="teacher">雪灵</span></span>
