新页面完善

--- a/pc/online-web/src/main/webapp/web/html/school/anchor-hospital.html
+++ b/pc/online-web/src/main/webapp/web/html/school/anchor-hospital.html
@@ -15,11 +15,8 @@
 			<link rel="stylesheet" href="/web/css/footer.css" />
 			<link rel="stylesheet" href="/web/font/iconfont.css" />
 		<!--公共头部和底部样式结束-->
-		<!--登陆的bootstrap样式-->
-			<link rel="stylesheet" href="/web/css/mylogin.css" />
 			<link href="/web/bootstrap-select/bootstrap.min.css" rel="stylesheet">
-			<link rel="stylesheet" type="text/css" href="/web/bootstrap-select/bootstrap-select.css">
-		<!--登陆的bootstrap样式结束-->
+			<link rel="stylesheet" href="/web/css/mylogin.css"/><!--登陆的bootstrap样式结束-->
 			<link rel="stylesheet" href="/web/css/school/anchor-hospital.css"  />
 	</head>
 	<body>
@@ -351,9 +348,7 @@
 			<script src="/web/html/school/school-header/header.js" type="text/javascript" charset="utf-8"></script>
 			<script type="text/javascript" src="/web/js/footer.js"></script>
 		<!--公共头部和底部结束-->
-		<!--登陆-->
-			<script type="text/javascript" src="/web/js/jquery.SuperSlide.2.1.1.js"></script>
-			<script src="/web/js/bootstrap.js" type="text/javascript" charset="utf-8"></script>
+
 		<!--登陆结束-->	
 			<script src="/web/js/school/anchor-hospital.js" type="text/javascript" charset="utf-8"></script>
 			
