--- a/pc/online-web/src/main/webapp/web/html/school/school-recommend.html
+++ b/pc/online-web/src/main/webapp/web/html/school/school-recommend.html
@@ -18,7 +18,7 @@
 		<!--登陆的bootstrap样式-->
 			<link rel="stylesheet" href="/web/css/mylogin.css" />
 			<link href="/web/bootstrap-select/bootstrap.min.css" rel="stylesheet">
-			<link rel="stylesheet" type="text/css" href="/web/bootstrap-select/bootstrap-select.css">
+
 		<!--登陆的bootstrap样式-->
 			<link rel="stylesheet" href="/web/css/school/school-recommend.css"  />
 	</head>
@@ -70,7 +70,9 @@
 								<div class="img"><img src="https://file.ipandatcm.com/data/attachment/online/2018/03/17/14/f8b9b157ae4e4b9d9730607ecdcdac71.png"></div><span class="classCategory">音频</span>
 								<div class="detail">
 									<p class="title" data-text="音频测试3" title="音频测试3">音频测试3</p>
-									<p class="timeAndTeac"><span>讲师：<span class="teacher">雪灵</span></span>
+									<p class="timeAndTeac">
+										<span class="teacher">雪灵</span>
+
 									</p>
 									<p class="info clearfix"><span><span class="price">1</span><span>熊猫币</span></span><span class="stuCount"><img src="/web/images/studentCount.png" alt=""><span class="studentCou">15</span></span>
 									</p>
@@ -83,7 +85,8 @@
 								<div class="img"><img src="https://file.ipandatcm.com/data/attachment/online/2018/03/17/14/f8b9b157ae4e4b9d9730607ecdcdac71.png"></div><span class="classCategory">音频</span>
 								<div class="detail">
 									<p class="title" data-text="音频测试3" title="音频测试3">音频测试3</p>
-									<p class="timeAndTeac"><span>讲师：<span class="teacher">雪灵</span></span>
+									<p class="timeAndTeac">
+										<span class="teacher">雪灵</span>
 									</p>
 									<p class="info clearfix"><span><span class="price">1</span><span>熊猫币</span></span><span class="stuCount"><img src="/web/images/studentCount.png" alt=""><span class="studentCou">15</span></span>
 									</p>
@@ -96,7 +99,8 @@
 								<div class="img"><img src="https://file.ipandatcm.com/data/attachment/online/2018/03/17/14/f8b9b157ae4e4b9d9730607ecdcdac71.png"></div><span class="classCategory">音频</span>
 								<div class="detail">
 									<p class="title" data-text="音频测试3" title="音频测试3">音频测试3</p>
-									<p class="timeAndTeac"><span>讲师：<span class="teacher">雪灵</span></span>
+									<p class="timeAndTeac">
+										<span class="teacher">雪灵</span>
 									</p>
 									<p class="info clearfix"><span><span class="price">1</span><span>熊猫币</span></span><span class="stuCount"><img src="/web/images/studentCount.png" alt=""><span class="studentCou">15</span></span>
 									</p>
@@ -174,9 +178,7 @@
 			<script src="/web/html/school/school-header/header.js" type="text/javascript" charset="utf-8"></script>
 			<script type="text/javascript" src="/web/js/footer.js"></script>
 		<!--公共头部和底部结束-->
-		<!--登陆-->
-			<script type="text/javascript" src="/web/js/jquery.SuperSlide.2.1.1.js"></script>
-			<script src="/web/js/bootstrap.js" type="text/javascript" charset="utf-8"></script>
+
 		<!--登陆结束-->	
 			<script src="/web/js/school/school-recommend.js" type="text/javascript" charset="utf-8"></script>
 			
