--- a/pc/online-web/src/main/webapp/web/html/school/school-under.html
+++ b/pc/online-web/src/main/webapp/web/html/school/school-under.html
@@ -18,7 +18,7 @@
 		<!--登陆的bootstrap样式-->
 			<link rel="stylesheet" href="/web/css/mylogin.css" />
 			<link href="/web/bootstrap-select/bootstrap.min.css" rel="stylesheet">
-			<link rel="stylesheet" type="text/css" href="/web/bootstrap-select/bootstrap-select.css">
+
 		<!--登陆的bootstrap样式-->
 			<link rel="stylesheet" href="/web/css/school/school-under.css"  />
 	</head>
@@ -39,10 +39,12 @@
 						<div class="course clearfix">
 							<img style="position:absolute;width: 16%;top:-2px;left:-2px;z-index:999" src="/web/images/recommend2.png">
 							<a style="cursor:pointer" href="/course/courses/611" target="_blank">
-								<div class="img"><img src="https://file.ipandatcm.com/data/attachment/online/2018/03/17/14/f8b9b157ae4e4b9d9730607ecdcdac71.png"></div><span class="classCategory">音频</span>
+								<div class="img"><img src="https://file.ipandatcm.com/data/attachment/online/2018/03/17/14/f8b9b157ae4e4b9d9730607ecdcdac71.png"></div><span class="classCategory">线下课程</span>
 								<div class="detail">
 									<p class="title" data-text="音频测试3" title="音频测试3">音频测试3</p>
-									<p class="timeAndTeac"><span>讲师：<span class="teacher">雪灵</span></span>
+									<p class="timeAndTeac">
+										<span class="teacher">雪灵</span>
+										<span class="y">北京</span>
 									</p>
 									<p class="info clearfix"><span><span class="price">1</span><span>熊猫币</span></span><span class="stuCount"><img src="/web/images/studentCount.png" alt=""><span class="studentCou">15</span></span>
 									</p>
@@ -52,10 +54,12 @@
 						<div class="course clearfix">
 							<img style="position:absolute;width: 16%;top:-2px;left:-2px;z-index:999" src="/web/images/recommend2.png">
 							<a style="cursor:pointer" href="/course/courses/611" target="_blank">
-								<div class="img"><img src="https://file.ipandatcm.com/data/attachment/online/2018/03/17/14/f8b9b157ae4e4b9d9730607ecdcdac71.png"></div><span class="classCategory">音频</span>
+								<div class="img"><img src="https://file.ipandatcm.com/data/attachment/online/2018/03/17/14/f8b9b157ae4e4b9d9730607ecdcdac71.png"></div><span class="classCategory">线下课程</span>
 								<div class="detail">
 									<p class="title" data-text="音频测试3" title="音频测试3">音频测试3</p>
-									<p class="timeAndTeac"><span>讲师：<span class="teacher">雪灵</span></span>
+									<p class="timeAndTeac">
+										<span class="teacher">雪灵</span>
+										<span class="y">北京</span>
 									</p>
 									<p class="info clearfix"><span><span class="price">1</span><span>熊猫币</span></span><span class="stuCount"><img src="/web/images/studentCount.png" alt=""><span class="studentCou">15</span></span>
 									</p>
@@ -65,10 +69,12 @@
 						<div class="course clearfix">
 							<img style="position:absolute;width: 16%;top:-2px;left:-2px;z-index:999" src="/web/images/recommend2.png">
 							<a style="cursor:pointer" href="/course/courses/611" target="_blank">
-								<div class="img"><img src="https://file.ipandatcm.com/data/attachment/online/2018/03/17/14/f8b9b157ae4e4b9d9730607ecdcdac71.png"></div><span class="classCategory">音频</span>
+								<div class="img"><img src="https://file.ipandatcm.com/data/attachment/online/2018/03/17/14/f8b9b157ae4e4b9d9730607ecdcdac71.png"></div><span class="classCategory">线下课程</span>
 								<div class="detail">
 									<p class="title" data-text="音频测试3" title="音频测试3">音频测试3</p>
-									<p class="timeAndTeac"><span>讲师：<span class="teacher">雪灵</span></span>
+									<p class="timeAndTeac">
+										<span class="teacher">雪灵</span>
+										<span class="y">北京</span>
 									</p>
 									<p class="info clearfix"><span><span class="price">1</span><span>熊猫币</span></span><span class="stuCount"><img src="/web/images/studentCount.png" alt=""><span class="studentCou">15</span></span>
 									</p>
@@ -78,10 +84,12 @@
 						<div class="course clearfix">
 							<img style="position:absolute;width: 16%;top:-2px;left:-2px;z-index:999" src="/web/images/recommend2.png">
 							<a style="cursor:pointer" href="/course/courses/611" target="_blank">
-								<div class="img"><img src="https://file.ipandatcm.com/data/attachment/online/2018/03/17/14/f8b9b157ae4e4b9d9730607ecdcdac71.png"></div><span class="classCategory">音频</span>
+								<div class="img"><img src="https://file.ipandatcm.com/data/attachment/online/2018/03/17/14/f8b9b157ae4e4b9d9730607ecdcdac71.png"></div><span class="classCategory">线下课程</span>
 								<div class="detail">
 									<p class="title" data-text="音频测试3" title="音频测试3">音频测试3</p>
-									<p class="timeAndTeac"><span>讲师：<span class="teacher">雪灵</span></span>
+									<p class="timeAndTeac">
+										<span class="teacher">雪灵</span>
+										<span class="y">北京</span>
 									</p>
 									<p class="info clearfix"><span><span class="price">1</span><span>熊猫币</span></span><span class="stuCount"><img src="/web/images/studentCount.png" alt=""><span class="studentCou">15</span></span>
 									</p>
@@ -147,9 +155,7 @@
 			<script src="/web/html/school/school-header/header.js" type="text/javascript" charset="utf-8"></script>
 			<script type="text/javascript" src="/web/js/footer.js"></script>
 		<!--公共头部和底部结束-->
-		<!--登陆-->
-			<script type="text/javascript" src="/web/js/jquery.SuperSlide.2.1.1.js"></script>
-			<script src="/web/js/bootstrap.js" type="text/javascript" charset="utf-8"></script>
+
 		<!--登陆结束-->
 			<script src="/web/js/school/school-under.js" type="text/javascript" charset="utf-8"></script>
 		
