--- a/pc/online-web/src/main/webapp/web/html/school/school-video.html
+++ b/pc/online-web/src/main/webapp/web/html/school/school-video.html
@@ -20,20 +20,20 @@
 			<link href="/web/bootstrap-select/bootstrap.min.css" rel="stylesheet">
 
 		<!--登陆的bootstrap样式-->
-			<link rel="stylesheet" href="/web/css/school/school-live.css"  />
+			<link rel="stylesheet" href="/web/css/school/school-video.css"  />
 	</head>
-	<body>
+		<body>
 <!--左侧精品、免费、最新、养生课程-->		
 		<div class="wp">
 			<div class="wrap-left z">
 				<div class="wrap-banner">
 					<img src="../../images/banner-wrap.jpg" alt="广告图"/>
-				</div>		
-<!--精品课程、免费课程、最新课程、养生课程、-->			
+				</div>
+<!--全国课程-->			
 				<div class="main">
 					<div class="content-class">	
 						<div class="wrap-title">
-							<span>最新课程</span>
+							<span>听课推荐</span>
 							<p><a href="/web/html/school/curriculum-list.html">更多</a><img src="../../images/rili_icon.png" alt="箭头" /> </p>
 						</div>
 						<div class="course clearfix">
@@ -42,7 +42,8 @@
 								<div class="img"><img src="https://file.ipandatcm.com/data/attachment/online/2018/03/17/14/f8b9b157ae4e4b9d9730607ecdcdac71.png"></div><span class="classCategory">音频</span>
 								<div class="detail">
 									<p class="title" data-text="音频测试3" title="音频测试3">音频测试3</p>
-									<p class="timeAndTeac"><span class="teacher">雪灵</span>
+									<p class="timeAndTeac">
+										<span class="teacher">雪灵</span>
 									</p>
 									<p class="info clearfix"><span><span class="price">1</span><span>熊猫币</span></span><span class="stuCount"><img src="/web/images/studentCount.png" alt=""><span class="studentCou">15</span></span>
 									</p>
@@ -75,11 +76,24 @@
 								</div>
 							</a>
 						</div>
-					</div>					
-				</div>					
+						<div class="course clearfix">
+							<img style="position:absolute;width: 16%;top:-2px;left:-2px;z-index:999" src="/web/images/recommend2.png">
+							<a style="cursor:pointer" href="/course/courses/611" target="_blank">
+								<div class="img"><img src="https://file.ipandatcm.com/data/attachment/online/2018/03/17/14/f8b9b157ae4e4b9d9730607ecdcdac71.png"></div><span class="classCategory">音频</span>
+								<div class="detail">
+									<p class="title" data-text="音频测试3" title="音频测试3">音频测试3</p>
+									<p class="timeAndTeac"><span class="teacher">雪灵</span>
+									</p>
+									<p class="info clearfix"><span><span class="price">1</span><span>熊猫币</span></span><span class="stuCount"><img src="/web/images/studentCount.png" alt=""><span class="studentCou">15</span></span>
+									</p>
+								</div>
+							</a>
+						</div>
+					</div>
+				</div>			
 			</div>
 	
-<!--右侧成为主播、搜索、名师推荐-->
+<!--右侧名师推荐-->
 			<div class="wrap-right y">				
 				<div class="wrap-docter">
 					<span>名师推荐</span>
@@ -122,9 +136,12 @@
 
 
 
-		<script src="/web/js/jquery-1.12.1.js" type="text/javascript" charset="utf-8"></script>
-		<script type="text/javascript" src="/web/js/artTemplate.js"></script>	
-		<script src="/web/js/bootstrap.js" type="text/javascript" charset="utf-8"></script>
+
+
+
+			<script src="/web/js/jquery-1.12.1.js" type="text/javascript" charset="utf-8"></script>
+			<script type="text/javascript" src="/web/js/artTemplate.js"></script>	
+			<script src="/web/js/bootstrap.js" type="text/javascript" charset="utf-8"></script>
 		
 		<!--公共头部和底部-->
 			<script src="/web/js/ajax.js" type="text/javascript" charset="utf-8"></script>
@@ -132,9 +149,9 @@
 			<script type="text/javascript" src="/web/js/footer.js"></script>
 		<!--公共头部和底部结束-->
 
-		<!--登陆结束-->	
-			<script src="/web/js/school/school-live.js" type="text/javascript" charset="utf-8"></script>
-			
+		<!--登陆结束-->
+			<script src="/web/js/school/school-video.js" type="text/javascript" charset="utf-8"></script>
+		
 	</body>
 		
 </html>
