直播回放--新ui

--- a/wechat/src/main/webapp/xcview/html/live_play.html
+++ b/wechat/src/main/webapp/xcview/html/live_play.html
@@ -159,13 +159,8 @@
 	<div class="wrap_synopsis">	
 		<div class="my_synopsis">
 			<ul>
-				<li class="z">
-					<p></p>
-				</li>
+				<li class="border"></li>
 				<li>简介</li>
-				<li class="y" style="float: right;">
-					<p></p>
-				</li>
 			</ul>
 		</div>		
 	</div>
@@ -187,9 +182,8 @@
 	<!--主讲人-->
 		<div class="wrap_speak">		
 			<div class="main_speak">
-				<p></p>
+				<p class="border"></p>
 				<p>主讲人</p>
-				<p></p>
 			</div>		
 		</div>
 	<!--内容-->
@@ -207,6 +201,7 @@
 
 	<!--评论-->
 	<div class="wrap_comment_title" onclick="btn_allComment()">
+		<p class="border"></p>
 		<p>评论</p>
 		<span>
 			<img src="../images/video_review.png" />
